Search bar spacing on games page messed up, this should fix it

--- a/public/css/games.css
+++ b/public/css/games.css
@@ -64,7 +64,7 @@
 .searchBarGames {
     text-align: center;
     width: 100%;
-    padding-top: 12%;
+    padding-top: 8%;
     /* Original padding-bottom: 2%;*/
     padding-bottom: 7%;
 }
